examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/head_reconstruct.st
// ERROR_NOT_A_LIST
language core;

extend with #type-reconstruction, #lists;

fn main(arg : Nat) -> auto {
  return (fn (a : auto) { return List::head(arg) })(0)
}//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
\n\n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
/n/n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
